# autoproxy

./: Cargo.toml  README.md
autoproxy/: Cargo.toml
autoproxy/src/: main.rs  proxy.rs  rule.rs
autoproxy/src/proxy/: mod.rs
config/: autoproxy.toml
httpproxy/src/: lib.rs
socks5/: Cargo.toml
socks5/src/: client.rs  lib.rs  proto.rs  server.rs  udp.rs
src/: lib.rs  main.rs  proxy.rs  rule.rs
src/proxy/: http.rs  mod.rs  socks5.rs
